```diff --- a/src/main/java/me/amlu/shop/amlume_shop/model/User.java +++ b/src/main/java/me/amlu/shop/amlume_shop/model/User.java @@ -17,13 +17,13 @@  import jakarta.validation.constraints.NotBlank;  import jakarta.validation.constraints.Size;  import lombok.*; +import lombok.experimental.FieldNameConstants;  import lombok.experimental.SuperBuilder;  import me.amlu.shop.amlume_shop.config.Phone; +import me.amlu.shop.amlume_shop.model.address.Address;  import org.hibernate.proxy.HibernateProxy;  import org.springframework.security.core.GrantedAuthority;  import org.springframework.security.core.authority.SimpleGrantedAuthority;  import org.springframework.security.core.userdetails.UserDetails; -  import java.io.Serial;  import java.time.Instant;  import java.util.*; @@ -36,12 +36,12 @@          @UniqueConstraint(columnNames = "user_name"),          @UniqueConstraint(columnNames = "user_email")  }) -@NoArgsConstructor -@AllArgsConstructor  @Getter  @Setter -@Builder +@NoArgsConstructor +@SuperBuilder  @ToString +@FieldNameConstants  public class User extends BaseEntity implements UserDetails {
     @Serial
@@ -67,6 +67,7 @@
     private String userEmail;

     @Column(name = "user_email_verified", nullable = false)
+    @SuppressWarnings("all")
     @Builder.Default
     private boolean userEmailVerified = false;

@@ -74,11 +75,11 @@
     @Size(min = 12, max = 120, message = "Password must be between 12 and 120 characters")
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
     @Column(nullable = false, name = "user_password")
-    private String password;  // This will store the Argon2id hash
+    private String password;

-    @Phone
-//    @NotBlank
+    @Phone //    @NotBlank
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
-    @Size(min = 5, max = 250, message = "Phone number must be between 5 and 250 characters")
+    @Size(min = 5, max = 50, message = "Phone number must be between 5 and 50 characters")
     @Column(name = "phone_number")
 