@@ -17,29 +17,34 @@ import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Size;
 import lombok.*;
+import lombok.experimental.SuperBuilder;
 import me.amlu.shop.amlume_shop.config.Phone;
+import me.amlu.shop.amlume_shop.model.address.Address;
 import org.hibernate.proxy.HibernateProxy;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.io.Serial;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "_users", uniqueConstraints = {
         @UniqueConstraint(columnNames = "user_name"),
         @UniqueConstraint(columnNames = "user_email")
 })
-@NoArgsConstructor
-@AllArgsConstructor
 @Getter
 @Setter
-@Builder
+@NoArgsConstructor
+@SuperBuilder
 @ToString
 public class User extends BaseEntity implements UserDetails {
+
+    @Serial
+    private static final long serialVersionUID = 1L;
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "user_id")
@@ -67,41 +72,56 @@ public class User extends BaseEntity implements UserDetails {
     private String userEmail;
 
     @Column(name = "user_email_verified", nullable = false)
+    @Builder.Default
     private boolean userEmailVerified = false;
 
     @NotBlank
     @Size(min = 12, max = 120, message = "Password must be between 12 and 120 characters")
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
     @Column(nullable = false, name = "user_password")
-    private String password;  // This will store the Argon2id hash
+    private String password;  // This will store the Argon2id or other hash
 
-    @Phone
 //    @NotBlank
+    @Phone
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
-    @Size(min = 5, max = 250, message = "Phone number must be between 5 and 250 characters")
+    @Size(min = 5, max = 50, message = "Phone number must be between 5 and 50 characters")
     @Column(name = "phone_number")
     private Phonenumber.PhoneNumber phoneNumber;
+
+    @Column(name = "user_department")
+    private String department;
+
+    @Column(name = "user_region")
+    private String region;
 
     @NotBlank
     @ManyToMany(fetch = FetchType.EAGER, cascade = {CascadeType.PERSIST, CascadeType.MERGE})
     @JoinTable(name = "user_roles",
             joinColumns = @JoinColumn(name = "user_id"),
             inverseJoinColumns = @JoinColumn(name = "role_id"))
-    private Set<Role> roles = new HashSet<>();
+    private transient Set<Role> roles = new HashSet<>();
 
-    @ManyToMany(cascade = {CascadeType.PERSIST, CascadeType.MERGE}, fetch = FetchType.LAZY)
+    @OneToMany(mappedBy = "categoryManager", cascade = {CascadeType.PERSIST, CascadeType.MERGE}, fetch = FetchType.LAZY, orphanRemoval = true)
+    @ToString.Exclude
+    private transient List<Category> categories = new CopyOnWriteArrayList<>();
+
+    @OneToMany(cascade = {CascadeType.PERSIST, CascadeType.MERGE}, fetch = FetchType.LAZY, orphanRemoval = true)
     @JoinTable(name = "user_address",
             joinColumns = @JoinColumn(name = "user_id"),
             inverseJoinColumns = @JoinColumn(name = "address_id"))
     @ToString.Exclude
-    private List<Address> addresses = new CopyOnWriteArrayList<>();
+    private transient List<Address> addresses = new CopyOnWriteArrayList<>();
 
     @OneToMany(mappedBy = "seller", cascade = {CascadeType.PERSIST, CascadeType.MERGE}, fetch = FetchType.LAZY, orphanRemoval = true)
     @ToString.Exclude
-    private Set<Product> products;
+    private transient Set<Product> products;
 
     @Column(name = "mfa_enabled", nullable = false)
-    private boolean mfaEnabled;
+    @Builder.Default
+    private boolean mfaEnabled = false;
+
+    @Column(name = "mfa_enforced")
+    private boolean mfaEnforced;
 
     @Column(name = "mfa_qr_code_url", nullable = true)
     private String mfaQrCodeUrl;
@@ -119,26 +139,33 @@ public class User extends BaseEntity implements UserDetails {
 
     @OneToMany(mappedBy = "user", fetch = FetchType.LAZY, cascade = CascadeType.ALL, orphanRemoval = true)
     @ToString.Exclude
-    private List<UserDeviceFingerprint> deviceFingerprints = new CopyOnWriteArrayList<>();
+    private transient List<UserDeviceFingerprint> deviceFingerprints = new CopyOnWriteArrayList<>();
 
 
     @Column(name = "user_locked", nullable = false)
+    @Builder.Default
     private boolean userLocked = false;
 
     @Column(name = "lock_time", nullable = true)
     private Instant lockTime;
 
     @Column(name = "failed_login_attempts", nullable = false)
-    private int failedLoginAttempts;
+    @Builder.Default
+    private int failedLoginAttempts = 0;
 
     @Column(name = "account_non_locked", nullable = false)
-    private boolean accountNonLocked; // For account locking (e.g. for failed login attempts). Non locked = true
+    @Builder.Default
+    private boolean accountNonLocked = true; // For account locking (e.g. for failed login attempts). Non locked = true
 
     @Column(name = "last_login_time", nullable = true)
     private Instant lastLoginTime;
 
     @Column(name = "account_non_expired", nullable = false)
-    private boolean accountNonExpired;
+    @Builder.Default
+    private boolean accountNonExpired = true;
+
+    @Column(name = "credentials_non_expired")
+    private boolean credentialsNonExpired;
 
     @Override
     public final boolean equals(Object o) {
@@ -163,7 +190,9 @@ public class User extends BaseEntity implements UserDetails {
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()  // Assuming 'roles' is a Set<Role> and Role has a 'name' attribute
                 .map(role -> new SimpleGrantedAuthority(role.getRoleName().name())) // Convert Role to GrantedAuthority. Call name() method on the enum
-                .collect(Collectors.toList());
+//                .collect(Collectors.toList());
+                .toList();
+//        return roles;
     }
 
     @Override
@@ -176,24 +205,23 @@ public class User extends BaseEntity implements UserDetails {
         return username;
     }
 
+    public boolean hasRole(Role role) {
+        return roles.contains(role);
+    }
+
     @Override
     public boolean isAccountNonExpired() {
-        return true;
+        return accountNonExpired;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return true;
+        return accountNonLocked;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
+        return credentialsNonExpired;
     }
 
 }
